@@ -3,6 +3,7 @@ Version 1.5.0
 * Add KVN5B format: like Mark5B but different data bit patterns (Richard Dodson)
 * Add 3, 5, 6, and 7 channel VDIF decoders
 * Add functionality to repair Mark5B data streams (regrid frames, remove stray bytes, fill missing frames with fill pattern)
+* Add Mark5B file summary program, m5bsum, akin to vsum (in vdifio)
 
 Version 1.4.4
 * Slightly faster and more relaxed frame finding for VLBA and Mark4 formats
